2009-09-21  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised extbase version to 0.9.8. This is a follow-up to bug #11903 and additionally makes the reflection cache work.

2009-09-21  Rupert Germann  <rupi@gmx.li>

	* Follow-up to bug #11505: clearing page cache from adminpanel didn't work
	* Fixed bug #12014: Extension Manager is not translatable (part 7) (thanks to Christopher Stelmaszyk)

2009-09-21  Oliver Hader  <oliver@typo3.org>

	* !!! Fixed bug #11903: Use separate tables for tags in the caching framework

2009-09-20  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #11642: filelinks are now created via the typolink method

2009-09-20  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Set SVN properties
	* Follow-up to feature #10585: Fixed PHPdoc comments and field rendering
	* Fixed bug #11834: Field handling API in t3lib_extMgm does not check for duplicates on insertion and runs superflouos insertions

2009-09-20  Francois Suter  <francois@typo3.org>

	* Fixed bug #12010: Task uid should be displayed in Scheduler's BE module list view
	* Follow-up to UI-Bug #F3282: Changed icon_warning.gif to match flash messages' warning icon
	* Fixed bug #11995: Prompt for keyboard input does not get displayed in CLI scripts
	* Fixed bug #11224: Special menu directory only renders 1st level if special.value is a mount point (thanks to Xavier Perseguers)
	* Cleanup #11989: Install Tool message colors should match flash message colors
	* Cleanup #12018: Added an icon for notice-level flash messages
	* Cleanup #12020: Made proper use of t3lib_pageRenderer for all inclusions of JS and CSS files in the Scheduler's BE module

2009-09-20  Benjamin Mack  <benni@typo3.org>

	* Added additional documentation for feature #12008: User setup misses a function for inserting fields at a position

2009-09-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12017: Wrong Inclusion in tceforms and tceforms_fe
	* Fixed bug #12016: JS and CSS inclusion may contain path/../path2/file