@@ -1,3 +1,7 @@
+2009-09-22  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #11994: Add more Flexibility to PageRenderer
+
 2009-09-21  Sebastian Kurfuerst  <sebastian@typo3.org>
 
 	* Raised extbase version to 0.9.8. This is a follow-up to bug #11903 and additionally makes the reflection cache work.
